--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "force-build": "SKIP_ENV_VALIDATION=1 next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
